[package]
name = "nifty-seam-carving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "carver"
path = "src/lib.rs"

[[bin]]
name = "nifty-seam-carving"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
image = "0.24.2"
thiserror = "1.0.31"
itertools = "0.10.3"
